# wtnps-finadv

./: .env  .env.example  COMPLETE_SUMMARY.txt  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  QUICK_SUMMARY.md  README.md  SETUP_SUMMARY.txt  examples_mt5_usage.py  pyproject.toml  quick_setup.py  test_config.py
.github/: agents_profile.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: architect_task.md  plan_scrum.md  quant_task.md  sprint2_task.md
.github/agents/: Architect.agent.md  Developer.agent.md  Guardian.agent.md  QA.agent.md
.github/prompts/: plan-mvpEventbusConnection.prompt.md  plan-theGreatMerge.prompt.md
.github/workflows/: ci.yml
configs/: main.yaml
docs/: MT5_CONFIGURATION_GUIDE.md
docs/architecture/: CANONICAL_LAYOUT.md  MIGRATION_GUIDE.md  MT5PROVIDER_BEFORE_AFTER.md  MT5PROVIDER_IMPLEMENTATION.md  MT5PROVIDER_INDEX.md  MT5PROVIDER_SUMMARY.md  MT5PROVIDER_VISUAL.md  PROJECT_ARCHITECT_HANDOVER.md
docs/planning/: CONTEXT_ANALYZER_README.md  FASE_3.1_STATUS.md  FASE_3.2_STATUS.md  FASE_3.3_CHECKLIST.md  FASE_3.3_TESTES_RESULTADOS.md  IMPLEMENTATION_PLAN.md  ITERACAO_FASE_3_RESUMO.md  PLANO_FASE_3.1.md  PLANO_FASE_3.2.md  (+6 more)
models/: WDO$_LSTMVolatilityStrategy_M5_prod_lstm.keras  WDO$_LSTMVolatilityStrategy_M5_prod_params.joblib  WDO$_LSTMVolatilityStrategy_M5_prod_scaler.joblib  WIN$_LSTMVolatilityStrategy_M5_prod_lstm.keras  WIN$_LSTMVolatilityStrategy_M5_prod_scaler.joblib
scripts/: dry_run.py  validate_environment.py
src/: events.py  live_trader.py  main  main.py  run.py
templates/: charts_clean.html  home.html
(+77 files in other folders)
