[tool.poetry]
name = "wtnps-finadv"
version = "0.1.0"
description = "WTNPS FinAdv - Algorithmic Trading Framework"
authors = ["evandro-godoy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^3.0.0"
numpy = "^2.4.1"
scipy = "^1.17.0"
tensorflow = "^2.20.0"
keras = "^3.13.2"
scikit-learn = "^1.8.0"
metatrader5 = "^5.0.5509"
pytz = "^2025.2"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
joblib = "^1.5.3"
sqlalchemy = "^2.0.46"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
websockets = "^16.0"
plotly = "^6.5.2"
mplfinance = "^0.12.10b0"
bokeh = "^3.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
pytest-asyncio = "^1.3.0"
black = "^26.1.0"
flake8 = "^7.3.0"
mypy = "^1.19.1"
ipython = "^9.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
